src/objects/External_Spend_Request_Cost__c.object
<CustomObject>
    <description>The costs associated with an external spend request</description>
    <fields>
        <fullName>Account_Part_Number__c</fullName>
        <label>Account Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External Spend Request Costs</relationshipLabel>
        <relationshipName>External_Spend_Request_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capital_Amount__c</fullName>
        <label>Capital Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Construction_In_Progress__c</fullName>
        <label>Construction In Progress #</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Spend_Request__c</fullName>
        <label>External Spend Request</label>
        <referenceTo>External_Spend_Request__c</referenceTo>
        <relationshipLabel>External Spend Request Costs</relationshipLabel>
        <relationshipName>External_Spend_Request_Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Funding_Organization__c</fullName>
        <label>Funding Organization</label>
        <picklist>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Labor_Expense_Amount__c</fullName>
        <label>Non Labor Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAR__c</fullName>
        <label>SAR #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Commodity_Type__c</fullName>
        <label>Sub-Commodity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Sum of all cost fields</description>
        <formula>Capital_Amount__c +  Expense_Amount__c +  Non_Labor_Expense_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of all cost fields</inlineHelpText>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>External Spend Request Cost</label>
    <nameField>
        <label>ESR Cost Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Spend Request Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Capital_Amount_Requires_SAR</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Capital_Amount__c   &lt;&gt;  0.0,  SAR__c = null)</errorConditionFormula>
        <errorDisplayField>SAR__c</errorDisplayField>
        <errorMessage>SAR# is required</errorMessage>
    </validationRules>
</CustomObject>